# ZPinchStabilitySim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: diagnostics.hh  equilibrium_solver.hh  linear_stability.hh  nonlinear_evolution.hh  zpinch_params.hh
pyscripts/: animation_2d.py  equilibrium_2d.py  instability_growth.py  mode_structure.py  radial_animation.py  stability_diagram.py
src/: diagnostics.cpp  equilibrium_solver.cpp  linear_stability.cpp  main.cpp  nonlinear_evolution.cpp
